Fix issue with layer categories and add some CSS back for visibility of expansion panel and zoom presets view

--- a/src/css/map-view.css
+++ b/src/css/map-view.css
@@ -1470,3 +1470,127 @@ other class: .ui-slider-range */
       }
     }
   }
+
+  .expansion-panel {
+    border: solid var(--map-col-item-divider, var(--map-col-bkg-lightest__deprecate));
+    border-width: 1px 0;
+    color: var(--map-col-text-highlight, white);
+    padding: .25rem .5rem;
+    font-size: 1rem;
+  
+    &.show-content {
+      .expansion-panel__content {
+        display: block;
+      }
+  
+      .icon-caret-down {
+        display: block;
+      }
+  
+      .icon-caret-up {
+      display: none;
+      }
+    }
+  
+    .icon-caret-down {
+      display: none;
+    }
+  
+    .icon-caret-up {
+      display: block;
+    }
+  
+    .expansion-panel__title {
+      user-select: none;
+      flex: 1;
+    }
+  
+    .expansion-panel__content {
+      display: none;
+      padding: .25rem 0;
+    }
+    
+    .expansion-panel__icon {
+      align-items: center;
+      display: flex;
+      font-size: 1.2rem;
+    }
+  
+    .expansion-panel__toggle {
+      display: flex;
+      justify-content: space-between;
+      cursor: pointer;
+      column-gap: 16px;
+      padding: 0 24px;
+      height:40px;
+      align-items: center;
+    } 
+  }
+
+  .viewfinder-zoom-presets {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    row-gap: .25rem;
+  
+    .viewfinder-zoom-preset__preset {
+      border-radius: var(--map-border-radius-small);
+      border: 1px solid var(--map-col-section-divider, var(--map-col-bkg-lightest__deprecate));
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      padding: .5rem;
+      row-gap: .5rem;
+  
+      &:hover {
+        background-color: var(--map-col-bkg-lightest);
+      }
+  
+      .viewfinder-zoom-preset__title {
+        font-weight: bold;
+      }
+  
+      .viewfinder-zoom-preset__description {
+        color: var(--map-col-text-body, var(--map-col-text));
+      }
+  
+      .viewfinder-zoom-preset__layers {
+        column-gap: 4px;
+        display: flex;
+        flex-wrap: wrap;
+        overflow: hidden;
+        row-gap: 4px; 
+      }
+  
+      .viewfinder-zoom-preset__layer {
+        align-items: center;
+        background: var(--map-col-bkg-lighter);
+        border-radius: 4px;
+        display: flex;
+        height: 24px;
+        justify-content: center;
+        max-width: 200px;
+        overflow: hidden;
+        padding: 0 16px 0 8px;
+  
+        .viewfinder-zoom-preset__layer-content {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          text-wrap: nowrap;
+          
+          i {
+            padding-right: 4px;
+          }
+        }
+      }
+    }
+  
+    .viewfinder-zoom-preset.viewfinder-zoom-preset--active .viewfinder-zoom-preset__preset {
+      background-color: var(--portal-col-buttons-bkg-highlight, var(--map-col-bkg-lighter__deprecate));
+      color: white;
+  
+      .viewfinder-zoom-preset__description {
+        color: white;
+      }
+    }
+  }
